Fixed Spacing
Fixed the spacing for elements on the list view

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 .item{
 	overflow: hidden;
-	margin-top: 10px;
+	padding: 5px 0;
 }
 
 .item span{
-	margin: auto;
+	margin: 10px 0px;
 }
 
 .odd{
